# Cereveon

./: .claudeignore  .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE.md  README.md  RELEASE.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml  trivy-ignore-policy.rego  trivy.yaml
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  dependabot.yml
android/: build.gradle.kts  gradle.properties
android/app/src/main/cpp/: CMakeLists.txt  SachmatuLenta.cpp  SachmatuLenta.h  native_chess_engine.cpp
design/: android-frame.jsx  atrium-screens-2.jsx  atrium-screens.jsx  coach-common.jsx  coach-variant-atrium.jsx  coach-variant-hud.jsx  coach-variant-obsidian.jsx  design-canvas.jsx  index.html
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CERT_PIN_ROTATION.md  DEPLOYMENT.md  LICENSE.md  OPERATIONS.md  OPERATIONS_RETRIES.md  PRIVACY_POLICY.md  RELEASE.md  SECA.md  TESTING.md  THREAT_MODEL.md  strength-spec.docx
engine/: perft_test.cpp  strength_test.cpp
ios/: .gitignore  README.md  TESTFLIGHT.md  project.yml
llm/: .gitignore  Dockerfile  Dockerfile.api  LOW_LATENCY_ARCHITECTURE.md  README_DEV.md  bootstrap_skill_dataset.py  cache_keys.py  check_coverage_thresholds.py  check_db.py  confidence_language_controller.py  conftest.py  docker-compose.yml  elite_engine_service.py  engine_eval.py  engine_pool.py  explain_pipeline.py  fen_hash.py  fly.toml  governor.py  host_app.py  log_config.py  metrics.py  observability.py  package.json  (+21 more)
(+1131 files in other folders)
